# ipaq-debrick

./: README.md  wiggler.pinout
bsrflash/: Makefile  bsrdevmem.c  bsrflash.c  bus.h  flash_device.h  h1900flash.c  jtag_core.c  jtag_core.h  libjtag.c  libjtag.h  pxa_bus.c  strataflash.c
fastjtag/: INSTALL  Makefile  README  e7xxleds.S  fflash.c  gibber.S  h1900leds.S  icacheboot.c  jtagrx.S  jtagrx_debug.S  libjtag.c  libjtag.h  memclient.S  miniload.c  params  rdevmem.c  rdump.c  rflash.c  rterm.c  script  taptest.c
gtag/: Makefile.am  Makefile.in  aclocal.m4  config.h  configure  configure.in  gtag.glade  gtag.gladep  mkinstalldirs
gtag/po/: Makefile.in
gtag/po/CVS/: Entries  Repository
gtag/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  dlc5.c  dlc5.h  gtag.h  interface.c  interface.h  main.c  ppdev.c  ppdev.h  tap.c  wiggler.c  wiggler.h
gtag/src/CVS/: Entries  Repository  Root
hamcop/: Makefile  debrick.S  first-stage.S  hamcop.c  hamcop.h  hamcopleds.asm  helloworld.S  insertecc.c  jtag_core.c  jtag_core.h  libjtag.c  libjtag.h  nand.c  nand.h  pwrctrl.c
hamcop/modules/: brick.c  brick.h  chain.c  chain.h  debrick.c  debrick.h  flash.c  flash.h  garbage.c  garbage.h  interactive.c  interactive.h  leds.c  leds.h  nand_dump.c  nand_dump.h  nand_verify.c  nand_verify.h
hamcop/modules/CVS/: Entries  Repository
